# python-hearthstone

./: .editorconfig  .gitignore  .travis.yml  MANIFEST.in  README.md  bootstrap.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
hearthstone/: __init__.py  bountyxml.py  cardxml.py  dbf.py  deckstrings.py  entities.py  enums.py  mercenaryxml.py  stringsfile.py  types.py  utils.py  xmlutils.py
hearthstone/hslog/: README.md  __init__.py  entities.py  exceptions.py  export.py  packets.py  parser.py  player.py  tokens.py  utils.py  watcher.py
hearthstone/hslog/tests/: test_main.py
hearthstone/utils/: __init__.py  mercenaries.py
scripts/: dump_reprints.py
tests/: data.py  test_bountyxml.py  test_cardxml.py  test_dbf.py  test_deckstrings.py  test_entities.py  test_enums.py  test_hslog.py  test_mercenaryxml.py  test_stringsfile.py  test_utils.py
tests/res/: DECK_RULESET_RULE_SUBSET.xml
