[metadata]
name = hearthstone
version = 3.14.21517
description = CardDefs.xml parser and Hearthstone enums for Python
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/python-hearthstone/
download_url = https://github.com/HearthSim/python-hearthstone/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment

[options]
packages = find:
include_package_data = True
zip_safe = True

[options.packages.find]
exclude =
	tests

[bdist_wheel]
universal = 1
