[metadata]
name = hearthstone
version = 9.11.0
description = CardDefs.xml parser and Hearthstone enums for Python
long_description = file: README.md
long_description_content_type=text/markdown
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/python-hearthstone/
download_url = https://github.com/HearthSim/python-hearthstone/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment

[options]
packages = find:
include_package_data = True
zip_safe = True
install_requires =
	requests

[options.packages.find]
exclude =
	tests
